# mm0

./: .gitignore  ARM64_BACKEND_PROGRESS.md  ARM64_BACKEND_STATUS.md  ARM64_INTEGRATION_GUIDE.md  ARM64_INTEGRATION_PLAN.md  ARM64_QUICK_REFERENCE.md  CLAUDE.md  MM0_ARGC_PROGRESS.md  README.md  TARGET_SELECTION.md  calculator_demo.elf  elf_data.txt  extract_calculator_elf.py  extract_elf.py  extract_elf_fixed.py  flake.nix  leanpkg.path  leanpkg.toml  minimal_real  mm0.md  save_elf.sh  set-mm.mm0  set.mm0  test_arm64.mm1  test_arm64_encoding  test_arm64_encoding.rs  test_arm64_exit42  test_arm64_progress  test_arm64_progress.rs  test_arm64_return  test_arm64_return.rs  test_arm64_return42  test_arm64_simple  test_arm64_simple.rs  test_exit_c  test_main_arg.elf  test_mm0_arm64.mm1
m0e/: 2.js  Cargo.toml  README.md  index.js  package-lock.json  package.json  webpack.config.js
m0e/.cargo/: config.toml
m0e/examples/: assembler.mm1  demo.mm1  hello.mm0  mm0.mm0  peano.mm0  peano.mm1  peano_hex.mm0  peano_hex.mm1  set.mm0  x86.mm0  x86_determ.mm1
m0e/src/: highlight.rs  index.js  language-configuration.js  lib.rs  main.js
mm0-rs/: .gitignore  ARCHITECTURE_ABSTRACTION_COMPLETE.md  ARCHITECTURE_AND_INTEGRATION.md  ARCHITECTURE_COUPLING_ISSUES.md  ARCHITECTURE_REFACTORING_SUMMARY.md  ARITHMETIC_INSTRUCTION_COMPARISON.md  ARM64_ARITHMETIC_SUMMARY.md  ARM64_BACKEND_PROGRESS.md  ARM64_PROOF_DESIGN.md  ARM64_STATUS_REPORT.md  ARM64_TRAIT_ARCHITECTURE.md  BINARY_EXECUTION_STATUS.md  CALCULATOR_DEMO_STATUS.md  COMPILER_FOUNDATION_COMPLETE.md  COMPILER_JOURNEY_COMPLETE.md  COMPILER_STATUS_UPDATE.md  Cargo.toml  FUNCTION_CALLS_IMPLEMENTATION.md  INCREMENTAL_REFACTORING_PLAN.md  LOOP_IMPLEMENTATION_STATUS.md  MAIN_ARGC_ARGV_UNDERSTANDING.md  MEMORY_OPERATIONS_COMPLETE.md  MM0_COMPILER_PROGRESS.md  MM0_SIMD_VERIFICATION_SUMMARY.md  MM1_INTEGRATION_GUIDE.md  MULTI_ARCHITECTURE_ACHIEVEMENT_SUMMARY.md  MULTI_ARCHITECTURE_STATUS.md  PARAMETER_PASSING_DESIGN.md  PIPELINE_STATUS_AND_ROADMAP.md  README.md  REGISTER_ALLOCATION_DESIGN.md  SIMD_IMPLEMENTATION_SUMMARY.md  SIMD_INTRINSICS_DESIGN.md  WASM_DEBUG_SUMMARY.md  build_examples.sh  clippy.sh  convert_binary.py  debug_wasm_generation  debug_wasm_generation.rs  demo_arithmetic_all_arch.sh  (+99 more)
mm0-rs/components/debug_derive/: Cargo.toml
mm0-rs/components/debug_derive/src/: lib.rs
mm0-rs/components/deepsize_0/: Cargo.toml
mm0-rs/components/deepsize_0/src/: lib.rs
mm0-rs/components/deepsize_derive/: Cargo.toml
mm0-rs/components/deepsize_derive/src/: lib.rs
mm0-rs/components/mm0-rs_util/: Cargo.toml  rustfmt.toml
mm0-rs/components/mm0-rs_util/src/: lib.rs  lined_string.rs  prims.rs
mm0-rs/components/mm0_deepsize/: Cargo.toml  LICENSE  README.md
mm0-rs/components/mm0_deepsize/src/: lib.rs
mm0-rs/components/mm0_deepsize_derive/: Cargo.toml
mm0-rs/components/mm0_deepsize_derive/src/: lib.rs
mm0-rs/components/mm0_util/: Cargo.toml  rustfmt.toml
mm0-rs/components/mm0_util/src/: atoms.rs  ids.rs  lib.rs  lined_string.rs  mmb.rs
mm0-rs/components/mm0b_parser/: Cargo.toml  rustfmt.toml
mm0-rs/components/mm0b_parser/fuzz/: Cargo.toml
mm0-rs/components/mm0b_parser/src/: lib.rs  parser.rs  ty.rs  write.rs
mm0-rs/components/mm0b_parser/test_resources/: peano.mmb
mm0-rs/components/mm0b_parser/tests/: basic.rs
mm0-rs/components/mm1_parser/: Cargo.toml
mm0-rs/components/mm1_parser/fuzz/: Cargo.toml
mm0-rs/components/mm1_parser/src/: ast.rs  lib.rs
mm0-rs/components/mm1_parser/test_resources/: peano.mm0  peano.mm1
mm0-rs/components/mm1_parser/tests/: basic.rs
mm0-rs/components/mmb_parser/: Cargo.toml
mm0-rs/components/mmb_parser/fuzz/: Cargo.toml
mm0-rs/components/mmb_parser/src/: lib.rs  parser.rs  ty.rs  write.rs
mm0-rs/components/mmb_parser/test_resources/: peano.mmb
mm0-rs/components/mmb_parser/tests/: basic.rs
mm0-rs/components/mmcc/: ARM64_COMPILATION_STATUS.md  ARM64_SUCCESS_REPORT.md  Cargo.toml  FINAL_ARCHITECTURE_STATUS.md  MULTI_ARCH_README.md  WASM_FINAL_STRETCH.md  WASM_PROGRESS_LAYER0.md  X86_ARCHITECTURE_INSIGHT.md  X86_ISOLATION_LAYERS.md  X86_ISOLATION_LEARNINGS.md  X86_ISOLATION_PLAN.md  build_all_architectures.sh  test_arm64.mm1  test_arm64_minimal.sh  test_compile.sh  test_exit_complete.mm1  test_minimal.mmc  test_simple_exit.mm1  test_wasm.mm1
mm0-rs/components/mmcc/docs/: PROOF_ARCHITECTURE.md
mm0-rs/components/mmcc/examples/: calculator.mmc  exit42.mmc  (+2 more)
mm0-rs/examples/: arithmetic_demo.mm1  arm64_calc.mm1  array_sum.mm1  calc_simple.mm1  calculator_multiarch.mm1  compiler.mm1  echo_args.mm1  fibonacci.mm1  hello_hardcoded.mm1  hello_string.mm1  mmc_lib.mm1  prime_checker.mm1
mm0-rs/src/: compiler.rs  doc.rs  elab.rs  export_mmb.rs  export_mmu.rs  joiner.rs  lib.rs  lined_string.rs  main.rs  mmc.rs  parser.rs  server.rs  test.rs  util.rs  vfs.rs
mm0-rs/src/deepsize/: deepsize.rs  main.rs  mod.rs
mm0-rs/src/doc/: mod.rs  proof.js  stylesheet.css
mm0-rs/src/elab/: environment.rs  frozen.rs  inout.rs  lisp.rs  local_context.rs  math_parser.rs  proof.rs  refine.rs  spans.rs  tactic.rs  verify.rs
mm0-rs/src/mmb/: export.rs  import.rs  mod.rs  parser.rs
mm0-rs/src/mmc/: ast_lower.rs  build_ast.rs  build_mir.rs  compiler.rs  infer.rs  mod.rs  nameck.rs  parser.rs  predef.rs  proof.rs  typeck.rs  types.rs  union_find.rs
mm0-rs/src/mmu/: export.rs  import.rs
mm0-rs/src/parser/: ast.rs
mm0-rs/test_binaries/: argv_test.wasm  argv_test_arm64  arm64_macho_test  arm64_working_test  array_sum_arm64  calc_arm64  calc_arm64.rs  calc_debug.wasm  calc_fixed.wasm  calc_x86  complex_expr  direct_x86_64  exit42_arm64  frame_test.wasm  frame_test_arm64  loop.wasm  loop_arm64  loop_arm64.rs  loop_fixed.wasm  loop_x86  memory_test.wasm  memory_test_arm64  param_complete.wasm  param_complete_arm64  param_test.wasm  param_test_arm64  param_test_arm64.rs  register_pressure  register_reuse  spill_test  stack_frame_test  store_load.wasm  store_load_arm64
mm0-rs/test_programs/: exit42.mm1
mm0-rs/tests/: integration_test.rs
mm0-rs/tests/common/: mod.rs
mm0-rs/theory/: separation_logic.tex
(+9365 files in other folders)
