[package]
name = "m0e"
version = "0.1.0"
authors = ["Mario Carneiro <di.gama@gmail.com>"]
edition = "2018"
description = "MM0/MM1 explorer"
repository = "https://github.com/digama0/mm0"
readme = "README.md"
license = "CC0"
keywords = ["theorem", "proving", "proof", "assistant"]
categories = ["command-line-utilities", "development-tools", "mathematics"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
mm0-rs = { path = "../mm0-rs", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2.69"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.46"
features = ["console"]
