[package]
name = "m0e"
version = "0.1.0"
authors = ["Mario Carneiro <di.gama@gmail.com>"]
edition = "2021"
description = "MM0/MM1 explorer"
repository = "https://github.com/digama0/mm0"
readme = "README.md"
license = "CC0-1.0"
keywords = ["theorem", "proving", "proof", "assistant"]
categories = ["command-line-utilities", "development-tools", "mathematics"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
lsp-types = "0.93"
crossbeam-channel = "0.5"
serde = "1.0"
mm0-rs = { path = "../mm0-rs", default-features = false, features = ["wasm", "server"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
