[package]
name = "mm0-rs"
version = "0.1.0"
authors = ["Mario Carneiro <di.gama@gmail.com>"]
edition = "2018"
description = "MM0/MM1 language toolchain"
repository = "https://github.com/digama0/mm0"
readme = "README.md"
license = "CC0-1.0"
keywords = ["theorem", "proving", "proof", "assistant"]
categories = ["command-line-utilities", "development-tools", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["server", "doc", "mmc"]
server = [
  "lsp-types", "mm0_deepsize/lsp-types",
  "lsp-server", "crossbeam", "simplelog", "log",
  "mm0_util/server", "mm1_parser/server"]
doc = ["pulldown-cmark"]
memory = [
  "mm0_deepsize", "mm0_deepsize_derive/nodummy",
  "mm0_util/memory", "mm1_parser/memory"]
wasm = ["console_error_panic_hook", "wasm-bindgen", "web-sys"]
mmc = ["bumpalo"]

[profile.release]
debug = true

[dependencies]
either = "1.6"
owning_ref = "0.4"
bitflags = "1.2"
byteorder = "1.4"
lazy_static = "1.4"
itertools = "0.10"
if_chain = "1.0"
pathdiff = "0.2"
num = "0.4"
typed-arena = "2.0"
arrayvec = "0.7"
smallvec = "1.6"
hashbrown = "0.11"
im = "15.0"
pretty = "0.10"
clap = "2.33"
futures = { version = "0.3", features = ["thread-pool"] }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
annotate-snippets = { version = "0.9", features = ["color"] }
libc = "0.2"
zerocopy = "0.5"
memchr = "2.3"
bit-vec = "0.6"
bit-set = "0.5"
mm0_deepsize_derive = { path = "components/mm0_deepsize_derive", default-features = false }
debug_derive = { path = "components/debug_derive" }
mm0_deepsize = { path = "components/mm0_deepsize", optional = true, features = [
  "num", "typed-arena", "futures", "owning_ref", "smallvec", "bit-vec", "bit-set"] }
mm0_util = { path = "components/mm0_util", default-features = false }
mm0b_parser = { path = "components/mm0b_parser" }
mm1_parser = { path = "components/mm1_parser" }

# For "server" feature
log = { version = "0.4", optional = true }
simplelog = { version = "0.10", optional = true }
crossbeam = { version = "0.8", optional = true }
lsp-types = { version = "0.89", optional = true }
lsp-server = { version = "0.5", optional = true }

# For "doc" feature
pulldown-cmark = { version = "0.8", optional = true }

# For "wasm" feature
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "console", "Window", "Document", "HtmlElement"] }

# For "mmc" feature
bumpalo = { version = "3.6", optional = true, features = ["boxed", "collections"] }

[target.'cfg(target_os = "linux")'.dependencies]
procinfo = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap = "0.7"
mm0_deepsize = { path = "components/mm0_deepsize", optional = true, features = ["memmap"] }

[[bin]]
name = "mm0-rs"
path = "src/main.rs"
doc = false