[package]
name = "mm0-rs"
version = "0.1.0"
authors = ["Mario Carneiro <di.gama@gmail.com>"]
edition = "2024"
description = "MM0/MM1 language toolchain"
repository = "https://github.com/digama0/mm0"
readme = "README.md"
license = "CC0-1.0"
keywords = ["theorem", "proving", "proof", "assistant"]
categories = ["command-line-utilities", "development-tools", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["server", "doc", "mmc"]
server = [
  "lsp-types", "mm0_deepsize/lsp-types",
  "lsp-server", "crossbeam", "simplelog", "log",
  "mm0_util/server", "mm1_parser/server"]
doc = ["lsp-types", "url", "pulldown-cmark", "pulldown-cmark-escape", "webbrowser"]
memory = [
  "mm0_deepsize", "mm0_deepsize_derive",
  "mm0_util/memory", "mm1_parser/memory", "mmcc/memory"]
wasm = ["console_error_panic_hook", "web-sys"]
mmc = ["mmcc", "im"]

[profile.release]
debug = true

[profile.dev]
opt-level = 2

[dependencies]
bitflags = "2.9"
byteorder = "1.5"
if_chain = "1.0"
itertools = "0.14"
pathdiff = "0.2"
arrayvec = "0.7"
num = "0.4"
pretty = "0.12"
clap = { version = "4.5", features = ["derive"] }
futures = { version = "0.3", features = ["thread-pool"] }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
annotate-snippets = "0.11"
libc = "0.2"
zerocopy = "0.7"
memchr = "2.7"
bit-set = "0.8"
typed-arena = "2.0"
mm0_deepsize_derive = { path = "components/mm0_deepsize_derive", optional = true }
debug_derive = { path = "components/debug_derive" }
mm0_deepsize = { path = "components/mm0_deepsize", optional = true, features = [
  "num", "typed-arena", "futures", "bit-set"] }
mm0_util = { path = "components/mm0_util", default-features = false }
mm0b_parser = { path = "components/mm0b_parser" }
mm1_parser = { path = "components/mm1_parser" }

# For "server" feature
log = { version = "0.4", optional = true }
simplelog = { version = "0.12", optional = true }
crossbeam = { version = "0.8", optional = true }
lsp-types = { version = "0.97", optional = true }
lsp-server = { version = "0.7", optional = true }

# For "doc" feature
url = { version = "2.5", optional = true }
pulldown-cmark = { version = "0.13", optional = true }
pulldown-cmark-escape = { version = "0.11", optional = true }
webbrowser = { version = "1.0", optional = true }

# For "wasm" feature
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "console", "Window", "Document", "HtmlElement"] }
instant = { version = "0.1", features = ["stdweb", "wasm-bindgen"] }

# For "mmc" feature
mmcc = { path = "components/mmcc", optional = true }
im = { version = "15.1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap = "0.7"
mm0_deepsize = { path = "components/mm0_deepsize", optional = true, features = ["memmap"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[[bin]]
name = "mm0-rs"
path = "src/main.rs"
doc = false
