[package]
name = "debug_derive"
version = "0.1.0"
authors = ["ammkrn <ammkrn@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.7"
syn = { version = "1.0.39", features = ["full"] }
