[package]
name = "deepsize_0"
version = "0.1.0"
authors = ["Aeledfyr <aeledfyr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deepsize_derive = { path = "../deepsize_derive", default-features = false }
num = "0.3.1"
typed-arena = "2.0.1"
lsp-types = "0.86.0"
futures = "0.3.12"
owning_ref = "0.4.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap = "0.7.0"




