[package]
name = "mm0_deepsize"
version = "0.1.3"
authors = ["Aeledfyr <aeledfyr@gmail.com>", "Mario Carneiro <di.gama@gmail.com>"]
edition = "2024"
include = ["Cargo.toml", "src/**/*.rs", "LICENSE", "README.md"]
description = "MM0 port of deepsize crate"
readme = "README.md"
keywords = ["size", "stack", "heap", "macro"]
categories = ["development-tools::profiling", "memory-management"]
license = "MIT"
repository = "https://github.com/digama0/mm0/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mm0_deepsize_derive = { version = "0.1.1", path = "../mm0_deepsize_derive" }
num = { version = "0.4", optional = true }
typed-arena = { version = "2.0", optional = true }
smallvec = { version = "1.8", optional = true }
bit-vec = { version = "0.8", optional = true }
bit-set = { version = "0.8", optional = true }
lsp-types = { version = "0.97", optional = true }
futures = { version = "0.3", optional = true }
hybrid-rc = { version = "0.6", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap = { version = "0.7", optional = true }
