[package]
name = "mm0_util"
version = "0.1.0"
authors = ["Mario Carneiro <di.gama@gmail.com>"]
edition = "2018"
description = "MM0/MM1 language utilities"
repository = "https://github.com/digama0/mm0"
include = ["Cargo.toml", "src/**/*.rs", "../../README.md"]
readme = "../../README.md"
license = "CC0-1.0"
keywords = ["theorem", "proving", "proof", "assistant"]
categories = ["command-line-utilities", "development-tools", "mathematics"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
memchr = "2.3"
pathdiff = "0.2"
bitflags = "1.2"

# optional dependencies
mm0_deepsize = { version = "0.1.0", path = "../mm0_deepsize", optional = true }
mm0_deepsize_derive = { version = "0.1.1", path = "../mm0_deepsize_derive", default-features = false, optional = true }
libc = { version = "0.2", optional = true }
lsp-types = { version = "0.89", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
procinfo = { version = "0.4", optional = true }

[features]
default = ["memory"]
memory = ["mm0_deepsize", "mm0_deepsize_derive", "libc", "procinfo"]
server = ["lsp-types"]
