[package]
name = "mm0_util"
version = "0.1.4"
authors = ["Mario Carneiro <di.gama@gmail.com>"]
edition = "2021"
description = "MM0/MM1 language utilities"
repository = "https://github.com/digama0/mm0"
include = ["Cargo.toml", "src/**/*.rs", "../../README.md", "rustfmt.toml"]
readme = "../../README.md"
license = "CC0-1.0"
keywords = ["theorem", "proving", "proof", "assistant"]
categories = ["command-line-utilities", "development-tools", "mathematics"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"

# optional dependencies
mm0_deepsize = { version = "0.1.0", path = "../mm0_deepsize", optional = true }
mm0_deepsize_derive = { version = "0.1.1", path = "../mm0_deepsize_derive", default-features = false, optional = true }
once_cell = { version = "1.12", optional = true }
pathdiff = { version = "0.2", optional = true }
libc = { version = "0.2", optional = true }
lsp-types = { version = "0.93", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
procinfo = { version = "0.4", optional = true }

[features]
default = ["memory", "lined_string"]
memory = ["mm0_deepsize", "mm0_deepsize_derive", "libc", "procinfo"]
server = ["lsp-types"]
lined_string = ["once_cell", "pathdiff"]
