[package]
name = "mm0b_parser"
version = "0.1.4"
authors = ["Mario Carneiro <di.gama@gmail.com>"]
edition = "2021"
description = "parsing tools for Metamath Zero's MMB binary format"
repository = "https://github.com/digama0/mm0"
include = ["Cargo.toml", "src/**/*.rs", "../../README.md", "rustfmt.toml"]
readme = "../../README.md"
license = "CC0-1.0"
keywords = ["theorem", "proving", "proof", "assistant"]
categories = ["command-line-utilities", "development-tools", "mathematics"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
byteorder = "1.4"
zerocopy = "0.6"
memchr = "2.5"
mm0_util = { version = "0.1.4", path = "../mm0_util", default-features = false }
