[package]
name = "mm1_parser"
version = "0.1.0"
authors = ["Mario Carneiro <di.gama@gmail.com>"]
edition = "2021"
description = "Parser for mm0 and mm1 files used by Metamath Zero"
repository = "https://github.com/digama0/mm0"
readme = "README.md"
license = "CC0-1.0"
keywords = ["theorem", "proving", "proof", "assistant"]
categories = ["command-line-utilities", "development-tools", "mathematics"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mm0_util = { path = "../mm0_util" }
num = "0.4"
annotate-snippets = { version = "0.9", features = ["color"] }
byteorder = "1.4"
zerocopy = "0.6"

# optional dependencies
mm0_deepsize = { path = "../mm0_deepsize", optional = true }
mm0_deepsize_derive = { path = "../mm0_deepsize_derive", optional = true }
libc = { version = "0.2", optional = true }
lsp-types = { version = "0.93", optional = true }

[features]
default = []
memory = ["mm0_deepsize", "mm0_deepsize_derive", "libc", "mm0_util/memory", "mm0_deepsize/num"]
server = ["lsp-types", "mm0_util/server"]
