[package]
name = "mmcc"
version = "0.1.0"
authors = ["Mario Carneiro <di.gama@gmail.com>"]
edition = "2018"
description = "Metamath C proof producing compiler"
repository = "https://github.com/digama0/mm0"
readme = "README.md"
license = "CC0-1.0"
keywords = ["theorem", "proving", "proof", "assistant", "compiler"]
categories = ["compilers", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
num = "0.4"
lazy_static = "1.4"
itertools = "0.10"
if_chain = "1.0"
smallvec = "1.6"
arrayvec = "0.7"
im = "15.0"
bit-vec = "0.6"
bit-set = "0.5"
hashbrown = "0.11"
typed-arena = "2.0"
bumpalo = { version = "3.7", features = ["boxed", "collections"] }
regalloc2 = { git = "https://github.com/bytecodealliance/regalloc2.git" }
mm0_util = { path = "../mm0_util", default-features = false }
mm0_deepsize = { path = "../mm0_deepsize", optional = true, features = [
  "num", "typed-arena", "smallvec", "bit-vec", "bit-set"] }
mm0_deepsize_derive = { path = "../mm0_deepsize_derive", optional = true }

[features]
memory = ["mm0_util/memory", "mm0_deepsize", "mm0_deepsize_derive"]
